tests/snapshots/snapshot_ir_translations__copilot_ir__copilot_ir_roundtrip_request.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&back"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Explain this error"
        }
      ]
    }
  ],
  "max_tokens": 1024,
  "sampling": {},
  "stream": {
    "enabled": false
  }
}
