tests/snapshots/snapshot_ir_translations__copilot_ir__copilot_minimal_request_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hello"
        }
      ]
    }
  ],
  "sampling": {},
  "stream": {
    "enabled": false
  }
}
