tests/snapshots/snapshot_ir_translations__copilot_ir__copilot_stream_event_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir_chunks"
---
[
  {
    "id": "chunk-01",
    "model": "gpt-4o",
    "index": 0,
    "delta_content": [
      {
        "type": "text",
        "text": "Hello"
      }
    ],
    "role": "assistant"
  }
]
